// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel conflicts with an existing {name}Id on target object metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldNameBisId" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldNameBisId" is not available as it is already used by another field",
                "value": "fieldNameBisId",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "fieldNameBisId",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel conflicts with an existing field on target object metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldName" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldName" is not available as it is already used by another field",
                "value": "fieldName",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "fieldName",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel contains only whitespace 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too short",
                "userFriendlyMessage": "Name is too short",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel exceeds maximum length 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too long",
                "userFriendlyMessage": "Name is too long",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel is empty 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too short",
                "userFriendlyMessage": "Name is too short",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetObjectMetadataId is unknown 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Object metadata relation target not found for relation creation payload",
                "userFriendlyMessage": "Object targeted by field to create not found",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": Any<String>,
                  "type": "MANY_TO_ONE",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when type is a wrong value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": Any<String>,
                  "type": "wrong",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when type is not provided 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": Any<String>,
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE when {name}Id is already used 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "IDX_747db609dd2bb7abe30d5d1926c",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldNameBisId" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldNameBisId" is not available as it is already used by another field",
                "value": "fieldNameBisId",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "fieldNameBisId",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE when target and source are the same object and name are the same 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "Relation Name",
                  "targetObjectMetadataId": Any<String>,
                  "type": "MANY_TO_ONE",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel conflicts with an existing {name}Id on target object metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "IDX_28fc32819c3dc0ec7c8594219fc",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldNameBisId" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldNameBisId" is not available as it is already used by another field",
                "value": "fieldNameBisId",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "fieldNameBisId",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel conflicts with an existing field on target object metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "IDX_e19260dc9ba8bb2ac7c39c6fcfd",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldName" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldName" is not available as it is already used by another field",
                "value": "fieldName",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "fieldName",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel contains only whitespace 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "IDX_78587d9d07f2ad40242e070725f",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too short",
                "userFriendlyMessage": "Name is too short",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel exceeds maximum length 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "IDX_94535ac037cc2cd5eb316e87a54",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too long",
                "userFriendlyMessage": "Name is too long",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel is empty 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "IDX_78587d9d07f2ad40242e070725f",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too short",
                "userFriendlyMessage": "Name is too short",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetObjectMetadataId is unknown 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Object metadata relation target not found for relation creation payload",
                "userFriendlyMessage": "Object targeted by field to create not found",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": Any<String>,
                  "type": "ONE_TO_MANY",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when type is a wrong value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": Any<String>,
                  "type": "wrong",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when type is not provided 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": Any<String>,
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY when {name}Id is already used 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldNameBisId" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldNameBisId" is not available as it is already used by another field",
                "value": "fieldNameBisId",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "fieldNameBisId",
              "objectMetadataId": Any<String>,
            },
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY when target and source are the same object and name are the same 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "Relation Name",
                  "targetObjectMetadataId": Any<String>,
                  "type": "ONE_TO_MANY",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;
